Fixed content p not wrapping in the component

--- a/pastebook-client/src/components/post/Post.css
+++ b/pastebook-client/src/components/post/Post.css
@@ -87,6 +87,11 @@ div.post-content-p {
     padding: 5px 15px;
 }
 
+div.post-content-p p{
+    word-break: break-all;
+    white-space: normal;
+}
+
 div.post-content-img {
     height: 93%;
     padding: 5px 0;
